kubernetes/apps/default/misc-ingress/app/ingress-internal-ssl-router.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: pfsense.png
    gethomepage.dev/name: pfSense
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/description: pfSense Router
    gethomepage.dev/widget.type: pfsense
    gethomepage.dev/widget.url: https://router.${SECRET_DOMAIN}
    gethomepage.dev/widget.username: ${HOMEPAGE_PFSENSE_USERNAME}
    gethomepage.dev/widget.password: ${HOMEPAGE_PFSENSE_PASSWORD
    gethomepage.dev/widget.wan: igb0
spec:
  ingressClassName: internal
  rules:
    - host: &host "router.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router
subsets:
  - addresses:
      - ip: "${SECRET_ROUTER_IP}"
    ports:
      - name: https
        port: 8443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: router
spec:
  ports:
    - name: https
      port: 8443
  type: ClusterIP
